<resources>
    <string name="app_name">Photoshooto</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="please_enter_your_registered_mobile_number_or_employee_id">Please enter your registered mobile number \nor employee ID</string>
    <string name="login">Log In</string>
    <string name="mobile_emp_id">Mobile Number or Employee ID</string>
    <string name="enter_mobile_empid">Enter Mobile Number</string>
    <string name="continue1">Continue</string>
    <string name="verify">Verify</string>
    <string name="enter_4_digit_pin">Enter Your 4 digit PIN</string>
    <string name="enter_6_digit">Please enter 6 digit OTP sent on your \nregistered %s</string>
    <string name="resend">Resend</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="setpin">Set PIN</string>
    <string name="four_digit_pin_txt">Enter 4 digit PIN for your own profile</string>
    <string name="create_4_digit_pin">Create 4 digit PIN , which you can use next onwards to login using the same.</string>
    <string name="submit">submit</string>
    <string name="confirm_submit"><![CDATA[CONFIRM & SUBMIT]]></string>
    <string name="reenter_4_digit">Re-enter 4 digit PIN</string>
    <string name="error_mobile_num">Enter valid mobile number</string>
    <string name="pin_cannot_be_empty">PIN cannot be empty</string>
    <string name="pin_valid">Enter Valid PIN</string>
    <string name="otp_error">OTP is not valid!</string>
    <string name="network_error">NetWork Error</string>
    <string name="internet_check">Please check your internet connection</string>
    <string name="standee_details_added">Standee Details Added</string>
    <string name="required_for_this_app">gps is required for this app</string>
    <string name="unlock_statement"><font color="#FF0000">Surprise 1 </font><font color="#000000">will unlock by </font><font color="#FF0000">12th June, 2023</font></string>
    <string name="unlock_features">Unlock all the features once you place a Order. We will provide you all the well curated features to improve your level. Unlock them all by clicking Unlock Features !</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="plase_take_motor_reading_image_login">please Take motor reading Image to Login</string>
    <string name="otp_cannot_be_empty">OTP cannot be empty</string>
    <string name="data_protected">Data Protected</string>
    <string name="made_india">Made in India</string>
    <string name="photoshooto">Photoshooto</string>
    <string name="your_memories">“Your Memories, Our Promise”</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="title_activity_login_routing">LoginRoutingActivity</string>
    <string name="first_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">ResetPwdMobile Fragment</string>
    <string name="third_fragment_label">ResetPwd Otp Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="welcome_to">Welcome to</string>
    <string name="please_login_or_signup">Please Login or Signup to use all\nour features</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notify">Notify</string>
    <string name="receive_the_event_album_link_on">Receive the Event Album link on</string>
    <string name="whatsApp">whatsapp</string>
    <string name="message">SMS</string>
    <string name="done">Done</string>
    <string name="redirect_to_home_page">Redirect to Home Page in </string>
    <string name="thanks_for_attending_the_event">Thanks for attending the event</string>
    <string name="once_your_photos_get">Once your photographer will upload\nphotos, you will be notified with the\n link</string>
    <string name="okay">Okay!</string>
    <string name="thanks_for_attending">Thanks for Attending</string>
    <string name="may_i_know_que">May I know your Name ?</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name<p><font color="red">*</font></p></string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="your_relation">Your Relation with</string>
    <string name="how_do_you_know">How do you know event organiser ?</string>
    <string name="relation">Relation</string>
    <string name="select_a_relation">Select a Relation</string>
    <string name="can_you_mention">Can you mention your mobile number ?</string>
    <string name="contact_num">Contact Number</string>
    <string name="contact_no">Contact No<p><font color="red">*</font></p></string>
    <string name="verification_Coe">Verification Code</string>
    <string name="verify_phone">Verify your account by entering the 6 digit\ncode sent to +91 %s</string>
    <string name="terms_privacy">terms privacy</string>
    <string name="enter_your_relation">Select Your Relation</string>
    <string name="scan_qr"><![CDATA[Scan QR Code & Get your\nPhotos later]]></string>
    <string name="logout">Logout</string>
    <string name="logout_ok">LOGOUT</string>
    <string name="would_you_like_to_logout">would  you like to logout</string>
    <string name="cancel">Cancel</string>
    <string name="login_txt_dummy">Please Login with your credentials to\naccess your account</string>
    <string name="userid_mobile">Photographer ID / Mobile No.</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="enter_email_mobile1">Enter Photographer ID / Mobile No.</string>
    <string name="enter_email_mobile">Enter Email ID / Mobile No.</string>
    <string name="enter_bill_id">Enter Billing ID</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forget_pass1">Forgot Password?</string>
    <string name="signup">Sign up</string>
    <string name="underline_signup1"><u>Sign Up</u></string>
    <string name="verify_it_s_you">Verify it’s you,</string>
    <string name="otp_sent_successfully">OTP Sent Successfully!</string>
    <string name="enter_otp_to_verify">Enter OTP to Verify</string>
    <string name="resend_otp_in">Resend OTP %s</string>
    <string name="support">Support</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_pass">Re-enter Password</string>
    <string name="re_enter_pwd">Re-enter New Password</string>
    <string name="create_new_pwd">Create New Password</string>
    <string name="facing_problems_resetting_password">Facing problems resetting Password?</string>
    <string name="get_support">Get Support</string>
    <string name="success_pwd_changed">Your password has been successfully changed</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_basic_data">Please enter your Basic Details</string>
    <string name="email_id">Email ID<p><font color="red">*</font></p></string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="promotion1">Receive Promotional and Newsletter from</string>
    <string name="promotion2">(Optional)</string>
    <string name="save">Save</string>
    <string name="you_have_select">You have to select any one\nof the medium to Notify.</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="enter_valid_email">Enter Valid EmailID</string>
    <string name="register">register</string>
    <string name="reset_pwd">reset_password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="gender">Gender</string>
    <string name="dob">Date Of Birth</string>
    <string name="update">Update</string>
    <string name="uses_of_standee">Uses of standee</string>
    <string name="label_user_of_standee_description">• To generate leads
        \n• Promote Studio Advertisement
        \n• Used for PR purpose
        \n• Product featuring
        \n• Awareness about your brand
        \n• Perfect way to capture the marketplace’s attention
    </string>
    <string name="label_qr_info">This QR code can be use in the live events on LED wall</string>
    <string name="how_to_use">How to use</string>
    <string name="benefits_of_professional_tshirt">Benefits of Professional T-Shirt</string>
    <string name="describe_benefit"><font color='#054871'> \u2022 </font>Brand awareness among target customers.\n
        <font color='#054871'>\u2022 </font>Market Your Business At A Low Cost.\n
        <font color='#054871'>\u2022 </font>Long-Lasting Promotional Material.\n
        <font color='#054871'>\u2022 </font>Improve Your Brand Recognition.\n
        <font color='#054871'>\u2022 </font>Professional logo creates your identity.\n
        <font color='#054871'>\u2022 </font>As your employees come wearing shirts from their homes all along the long route, they promote your brand.\n
        <font color='#054871'>\u2022 </font>By wearing the same t-shirt, your employees develop a sense of communityBy wearing the same t-shirt, your employees develop a sense of community.</string>
    <string name="type_of_standee">Type of standee</string>
    <string name="generate_event_qr_code">Generate Event QR Code</string>
    <string name="elite_standee">Elite Standee</string>
    <string name="qr_code_generated">Event QR Code Generated !</string>
    <string name="qr_code_missing">Event QR Code Missing!</string>
    <string name="qr_download_alert">Are you sure you want to  download event QR code again ?</string>
    <string name="qr_code_saved">QR code saved in gallery</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="we_are_happy_to_help_you_please_reach_out_us">We  are happy to help you \nplease reach out us</string>
    <string name="support_email_id"><u>support@photoshooto.com</u></string>
    <string name="support_phone_no">+91 7676123545</string>
    <string name="thank_you">Thank you</string>
    <string name="title_folder">Folder</string>
    <string name="title_enquiry">Enquiry</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="order_title">Order Title</string>
    <string name="rs_amount">₹%s</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="recently_posted">Recently Posted</string>
    <string name="verified_jobs">Verified Jobs</string>
    <string name="photographer_ratings">Photographer Ratings</string>
    <string name="nearby">Nearby</string>
    <string name="others">Others</string>
    <string name="decline">Decline</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">Apply</string>
    <string name="spam_or_misleading">Spam or Misleading</string>
    <string name="offensive_abusive_behavior_or_action">Offensive / Abusive Behavior or Action</string>
    <string name="trying_to_scam_people">Trying to Scam People</string>
    <string name="invalid_incomplete_data">Invalid / Incomplete Data</string>
    <string name="fake_product">Fake Product</string>
</resources>