<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/order_img"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_order_subs"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/shapeableImageViewBig"
        app:strokeColor="@color/colorWhite"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/order_row_name"
        style="@style/tvFontSemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/order_title"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/order_edit"
        app:layout_constraintStart_toEndOf="@id/order_img"
        app:layout_constraintTop_toTopOf="@id/order_img" />

    <TextView
        android:id="@+id/order_row_total"
        style="@style/tvFontSemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rs_amount"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/order_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_row_price" />

    <TextView
        android:id="@+id/order_type"
        style="@style/tvFontRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/grey_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/order_img"
        app:layout_constraintEnd_toStartOf="@id/order_row_total"
        app:layout_constraintStart_toStartOf="@id/order_row_name" />

    <TextView
        android:id="@+id/order_row_price"
        style="@style/tvFontRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/grey_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/order_type"
        app:layout_constraintEnd_toStartOf="@id/order_row_total"
        app:layout_constraintStart_toStartOf="@id/order_row_name" />

    <TextView
        android:id="@+id/order_edit"
        style="@style/tvFontSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_order_edit"
        android:drawablePadding="10dp"
        android:text="@string/edit"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_row_name" />

</androidx.constraintlayout.widget.ConstraintLayout>