<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout_corner_rounded_consult"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingEnd="17dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="Decline Product,"
            android:textColor="@color/grey24"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:singleLine="true"
            android:text="Canon 1300D"
            android:textColor="@color/colorPrimaryPressed"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:singleLine="true"
        android:text="Select a reason for Declining Product"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/rgDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="5dp"
            android:text="@string/spam_or_misleading"
            android:textColor="@drawable/radio_color_admin"
            android:textSize="11sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="5dp"
            android:text="@string/offensive_abusive_behavior_or_action"
            android:textColor="@drawable/radio_color_admin"
            android:textSize="11sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="5dp"
            android:text="@string/trying_to_scam_people"
            android:textColor="@drawable/radio_color_admin"
            android:textSize="11sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="5dp"
            android:text="@string/invalid_incomplete_data"
            android:textColor="@drawable/radio_color_admin"
            android:textSize="11sp"
            android:theme="@style/MyRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="5dp"
            android:text="@string/fake_product"
            android:textColor="@drawable/radio_color_admin"
            android:textSize="11sp"
            android:theme="@style/MyRadioButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_500"
                android:paddingStart="5dp"
                android:textColor="@drawable/radio_color_admin"
                android:textSize="11sp"
                android:theme="@style/MyRadioButton" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etOther"
                style="@style/tvStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorTransparent"
                android:enabled="false"
                android:fontFamily="@font/poppins_500"
                android:hint="@string/others"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/grey21"
                android:textColorHint="@color/grey21"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="11dp"
                android:visibility="visible" />

        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/btnStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button_border"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDecline"
            style="@style/btnStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/decline" />


    </LinearLayout>

</LinearLayout>
